Dark mode fix

--- a/assets/less/treeview.less
+++ b/assets/less/treeview.less
@@ -11,7 +11,6 @@
 @color-treeview-item-active-comment:         #ffffff;
 @color-treeview-light-submenu-bg:            lighten(@brand-primary, 5%);
 @color-treeview-light-submenu-border:        @brand-primary;
-@color-panel-light:                          #f0f4f8;
 @font-size-base:          14px;
 
 .control-treeview {
@@ -39,7 +38,7 @@
                 font-size: @font-size-base;
                 font-weight: normal;
                 background: @color-treeview-item-bg;
-                border-bottom: 1px solid @color-panel-light;
+                border-bottom: 1px solid @tertiary-bg;
                 position: relative;
 
                 > a {
